[gd_scene load_steps=9 format=3 uid="uid://bmd2s7qm6kwob"]

[ext_resource type="Script" path="res://Scripts/map_6p.gd" id="1_duxvg"]
[ext_resource type="PackedScene" uid="uid://btb5rxmja8oc8" path="res://Scenes/player.tscn" id="2_uo1ns"]
[ext_resource type="Texture2D" uid="uid://ck0fv8x87x1tk" path="res://Sprites/StageBlocks.png" id="2_uohja"]
[ext_resource type="Texture2D" uid="uid://bu3m2k4vhv2c3" path="res://Sprites/Timer - Sprite.png" id="3_kembo"]
[ext_resource type="Texture2D" uid="uid://c3yjav33673je" path="res://Sprites/Clock - Sprite.png" id="4_4tl07"]
[ext_resource type="Texture2D" uid="uid://ddhix4r73futy" path="res://Sprites/Players - Board.png" id="5_rgvnq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lt7g7"]
texture = ExtResource("2_uohja")
0:0/0 = 0
0:0/0/custom_data_1 = true
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_f3iff"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "breakable"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_lt7g7")

[node name="Map_6P" type="Node2D"]
script = ExtResource("1_duxvg")
player_scene = ExtResource("2_uo1ns")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_f3iff")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131072, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 655360, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 851968, 131072, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 8, 131072, 0, 7, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 65558, 131072, 0, 131094, 131072, 0, 196630, 131072, 0, 262166, 131072, 0, 327702, 131072, 0, 393238, 131072, 0, 458774, 131072, 0, 524310, 131072, 0, 589846, 131072, 0, 655382, 131072, 0, 720918, 131072, 0, 786454, 131072, 0, 851990, 131072, 0, 917504, 131072, 0, 917505, 131072, 0, 917506, 131072, 0, 917507, 131072, 0, 917508, 131072, 0, 917509, 131072, 0, 917510, 131072, 0, 917511, 131072, 0, 917512, 131072, 0, 917513, 131072, 0, 917514, 131072, 0, 917515, 131072, 0, 917516, 131072, 0, 917517, 131072, 0, 917518, 131072, 0, 917519, 131072, 0, 917520, 131072, 0, 917521, 131072, 0, 917522, 131072, 0, 917523, 131072, 0, 917524, 131072, 0, 917525, 131072, 0, 917526, 131072, 0, 65537, 196608, 0, 131073, 196608, 0, 196609, 196608, 0, 262145, 196608, 0, 327681, 196608, 0, 393217, 196608, 0, 458753, 196608, 0, 524289, 196608, 0, 589825, 196608, 0, 655361, 196608, 0, 720897, 196608, 0, 786433, 196608, 0, 851969, 196608, 0, 65538, 196608, 0, 131074, 65536, 0, 196610, 196608, 0, 262146, 65536, 0, 327682, 196608, 0, 393218, 65536, 0, 458754, 196608, 0, 524290, 65536, 0, 589826, 196608, 0, 655362, 65536, 0, 720898, 196608, 0, 786434, 65536, 0, 851970, 196608, 0, 65539, 196608, 0, 131075, 196608, 0, 196611, 196608, 0, 262147, 196608, 0, 327683, 196608, 0, 393219, 196608, 0, 458755, 196608, 0, 524291, 196608, 0, 589827, 196608, 0, 655363, 196608, 0, 720899, 196608, 0, 786435, 196608, 0, 851971, 196608, 0, 65540, 196608, 0, 131076, 65536, 0, 196612, 196608, 0, 262148, 65536, 0, 327684, 196608, 0, 393220, 65536, 0, 458756, 196608, 0, 524292, 65536, 0, 589828, 196608, 0, 655364, 65536, 0, 720900, 196608, 0, 786436, 65536, 0, 851972, 196608, 0, 65541, 196608, 0, 131077, 196608, 0, 196613, 196608, 0, 262149, 196608, 0, 327685, 196608, 0, 393221, 196608, 0, 458757, 196608, 0, 524293, 196608, 0, 589829, 196608, 0, 655365, 196608, 0, 720901, 196608, 0, 786437, 196608, 0, 851973, 196608, 0, 65542, 196608, 0, 131078, 65536, 0, 196614, 196608, 0, 262150, 65536, 0, 327686, 196608, 0, 393222, 65536, 0, 458758, 196608, 0, 524294, 65536, 0, 589830, 196608, 0, 655366, 65536, 0, 720902, 196608, 0, 786438, 65536, 0, 851974, 196608, 0, 65543, 196608, 0, 131079, 196608, 0, 196615, 196608, 0, 262151, 196608, 0, 327687, 196608, 0, 393223, 196608, 0, 458759, 196608, 0, 524295, 196608, 0, 589831, 196608, 0, 655367, 196608, 0, 720903, 196608, 0, 786439, 196608, 0, 851975, 196608, 0, 65544, 196608, 0, 131080, 65536, 0, 196616, 196608, 0, 262152, 65536, 0, 327688, 196608, 0, 393224, 65536, 0, 458760, 196608, 0, 524296, 65536, 0, 589832, 196608, 0, 655368, 65536, 0, 720904, 196608, 0, 786440, 65536, 0, 851976, 196608, 0, 65545, 196608, 0, 131081, 196608, 0, 196617, 196608, 0, 262153, 196608, 0, 327689, 196608, 0, 393225, 196608, 0, 458761, 196608, 0, 524297, 196608, 0, 589833, 196608, 0, 655369, 196608, 0, 720905, 196608, 0, 786441, 196608, 0, 851977, 196608, 0, 65546, 196608, 0, 131082, 65536, 0, 196618, 196608, 0, 262154, 65536, 0, 327690, 196608, 0, 393226, 65536, 0, 458762, 196608, 0, 524298, 65536, 0, 589834, 196608, 0, 655370, 65536, 0, 720906, 196608, 0, 786442, 65536, 0, 851978, 196608, 0, 65547, 196608, 0, 131083, 196608, 0, 196619, 196608, 0, 262155, 196608, 0, 327691, 196608, 0, 393227, 196608, 0, 458763, 196608, 0, 524299, 196608, 0, 589835, 196608, 0, 655371, 196608, 0, 720907, 196608, 0, 786443, 196608, 0, 65548, 196608, 0, 131084, 65536, 0, 196620, 196608, 0, 262156, 65536, 0, 327692, 196608, 0, 393228, 65536, 0, 458764, 196608, 0, 524300, 65536, 0, 589836, 196608, 0, 655372, 65536, 0, 720908, 196608, 0, 786444, 65536, 0, 851980, 196608, 0, 65549, 196608, 0, 131085, 196608, 0, 196621, 196608, 0, 262157, 196608, 0, 327693, 196608, 0, 393229, 196608, 0, 458765, 196608, 0, 524301, 196608, 0, 589837, 196608, 0, 655373, 196608, 0, 720909, 196608, 0, 786445, 196608, 0, 851981, 196608, 0, 65550, 196608, 0, 131086, 65536, 0, 196622, 196608, 0, 262158, 65536, 0, 327694, 196608, 0, 393230, 65536, 0, 458766, 196608, 0, 524302, 65536, 0, 589838, 196608, 0, 655374, 65536, 0, 720910, 196608, 0, 786446, 65536, 0, 851982, 196608, 0, 65551, 196608, 0, 131087, 196608, 0, 196623, 196608, 0, 262159, 196608, 0, 327695, 196608, 0, 393231, 196608, 0, 458767, 196608, 0, 524303, 196608, 0, 589839, 196608, 0, 655375, 196608, 0, 720911, 196608, 0, 786447, 196608, 0, 851983, 196608, 0, 65552, 196608, 0, 131088, 65536, 0, 196624, 196608, 0, 262160, 65536, 0, 327696, 196608, 0, 393232, 65536, 0, 458768, 196608, 0, 524304, 65536, 0, 589840, 196608, 0, 655376, 65536, 0, 720912, 196608, 0, 786448, 65536, 0, 851984, 196608, 0, 65553, 196608, 0, 131089, 196608, 0, 196625, 196608, 0, 262161, 196608, 0, 327697, 196608, 0, 393233, 196608, 0, 458769, 196608, 0, 524305, 196608, 0, 589841, 196608, 0, 655377, 196608, 0, 720913, 196608, 0, 786449, 196608, 0, 851985, 196608, 0, 65554, 196608, 0, 131090, 65536, 0, 196626, 196608, 0, 262162, 65536, 0, 327698, 196608, 0, 393234, 65536, 0, 458770, 196608, 0, 524306, 65536, 0, 589842, 196608, 0, 655378, 65536, 0, 720914, 196608, 0, 786450, 65536, 0, 851986, 196608, 0, 65555, 196608, 0, 131091, 196608, 0, 196627, 196608, 0, 262163, 196608, 0, 327699, 196608, 0, 393235, 196608, 0, 458771, 196608, 0, 524307, 196608, 0, 589843, 196608, 0, 655379, 196608, 0, 720915, 196608, 0, 786451, 196608, 0, 851987, 196608, 0, 65556, 196608, 0, 131092, 65536, 0, 196628, 196608, 0, 262164, 65536, 0, 327700, 196608, 0, 393236, 65536, 0, 458772, 196608, 0, 524308, 65536, 0, 589844, 196608, 0, 655380, 65536, 0, 720916, 196608, 0, 786452, 65536, 0, 851988, 196608, 0, 65557, 196608, 0, 131093, 196608, 0, 196629, 196608, 0, 262165, 196608, 0, 327701, 196608, 0, 393237, 196608, 0, 458773, 196608, 0, 524309, 196608, 0, 589845, 196608, 0, 655381, 196608, 0, 720917, 196608, 0, 786453, 196608, 0, 851989, 196608, 0, 851979, 196608, 0)
layer_1/tile_data = PackedInt32Array()

[node name="MapManager" type="Node" parent="."]

[node name="PlayerManager" type="Node" parent="."]

[node name="BombManager" type="Node" parent="."]

[node name="PowerUpManager" type="Node" parent="."]

[node name="Board" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Board"]
position = Vector2(392, 112)
scale = Vector2(1, 1.00591)
texture = ExtResource("3_kembo")

[node name="Timer" type="Timer" parent="Board"]
wait_time = 8.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="Board"]
offset_left = 376.0
offset_right = 416.0
offset_bottom = 32.0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/TimerLabel"]
position = Vector2(0, 16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4tl07")

[node name="P1" type="Label" parent="Board"]
visible = false
offset_left = 376.0
offset_top = 32.0
offset_right = 408.0
offset_bottom = 64.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P1"]
position = Vector2(8, 16)
texture = ExtResource("5_rgvnq")
hframes = 6

[node name="P2" type="Label" parent="Board"]
visible = false
offset_left = 376.0
offset_top = 64.0
offset_right = 408.0
offset_bottom = 96.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P2"]
position = Vector2(8, 16)
texture = ExtResource("5_rgvnq")
hframes = 6
frame = 1

[node name="P3" type="Label" parent="Board"]
visible = false
offset_left = 376.0
offset_top = 96.0
offset_right = 408.0
offset_bottom = 128.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P3"]
position = Vector2(8, 16)
texture = ExtResource("5_rgvnq")
hframes = 6
frame = 2

[node name="P4" type="Label" parent="Board"]
visible = false
offset_left = 376.0
offset_top = 128.0
offset_right = 408.0
offset_bottom = 160.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P4"]
position = Vector2(8, 16)
texture = ExtResource("5_rgvnq")
hframes = 6
frame = 3

[node name="P5" type="Label" parent="Board"]
visible = false
offset_left = 376.0
offset_top = 160.0
offset_right = 408.0
offset_bottom = 192.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P5"]
position = Vector2(8, 16)
texture = ExtResource("5_rgvnq")
hframes = 6
frame = 4

[node name="P6" type="Label" parent="Board"]
visible = false
offset_left = 376.0
offset_top = 192.0
offset_right = 408.0
offset_bottom = 224.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P6"]
position = Vector2(8, 16)
texture = ExtResource("5_rgvnq")
hframes = 6
frame = 5

[node name="GameStart" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
